argocd/uat/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: chatbot
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: chatbot
    app.kubernetes.io/name: chatbot
    app.kubernetes.io/part-of: chatbot
    app.openshift.io/runtime: nodejs
  name: chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
      - name: chatbot
        imagePullPolicy: Always
        image: docker.io/saravana1705/chatbot:v22
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
