argocd/uat/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: chatbot
  name: chatbot
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: chatbot
    weight: 100
